# computational-vision

./: .gitignore  README.md
laboratory/laboratory_01/: CMakeLists.txt  Makefile  README.md
laboratory/laboratory_01/docs/: instalacao_gpp_opencv_fedora.md
laboratory/laboratory_01/src/: exercise_01.cpp  exercise_02.cpp  exercise_03.cpp  exercise_04.cpp  exercise_05.cpp  exercise_06.cpp  exercise_07.cpp  exercise_08.cpp  main.cpp
laboratory/laboratory_02/: CMakeLists.txt  Makefile  README.md
laboratory/laboratory_02/docs/: exercises_list.md  guia.md  guia_transformada_hough.md  guia_transformada_hough_gemini.md
laboratory/laboratory_02/src/: exercise_01.cpp  exercise_02.cpp  main.cpp
project/docs/: ARCHITECTURE.md  CONOPS.md  REQUIREMENTS.md  TEST_PLAN.md
